--- a/professional-life.html
+++ b/professional-life.html
@@ -10,8 +10,8 @@
 
 <body>
     <header id="div1">
-        <div id="logo_menu">
-            <h1 id="logo"><span style="color:rgba(0, 255, 242);">></span>Javier Reyes Álvarez</h1>
+        <div class="logo_menu">
+            <h1 id="logo"><span style="color:aqua;">></span>Javier Reyes Álvarez</h1>
         </div>
         <nav class="nav_menu">
             <a class="header_menu" href="index.html">Welcome</a>
@@ -19,8 +19,32 @@
             <a class="header_menu" href="resources.html">Resources</a>
         </nav>
     </header>
-    <section class="main_div">
-        <div id="div2">
+    <section class="timeline_div">
+        <div class="timeline">
+            <div class="container left">
+                <div class="content">
+                    <h2 class="h2_timeline">September 2022</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2 class="h2_timeline">June 2024</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2 class="h2_timeline">September 2024</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2 class="h2_timeline">January 2025</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
         </div>
     </section>
     <hr class="hr_footer">
