--- a/resources.html
+++ b/resources.html
@@ -10,8 +10,8 @@
 
 <body>
     <header id="div1">
-        <div id="logo_menu">
-            <h1 id="logo"><span style="color:rgba(0, 255, 242);">></span>Javier Reyes Álvarez</h1>
+        <div class="logo_menu">
+            <h1 id="logo"><span style="color:aqua;">></span>Javier Reyes Álvarez</h1>
         </div>
         <nav class="nav_menu">
             <a class="header_menu" href="index.html">Welcome</a>
@@ -20,8 +20,6 @@
         </nav>
     </header>
     <section class="main_div">
-        <div id="div2">
-        </div>
     </section>
     <hr class="hr_footer">
     <footer>
