--- a/professional-life.html
+++ b/professional-life.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <header id="div1">
+    <header>
         <div class="logo_menu">
-            <h1 id="logo"><span style="color:aqua;">></span>Javier Reyes Álvarez</h1>
+            <h1 id="main_logo"><span style="color:aqua;">></span>Javier Reyes Álvarez</h1>
         </div>
         <nav class="nav_menu">
             <a class="header_menu" href="index.html">Welcome</a>
@@ -22,41 +22,67 @@
     <section class="timeline_div">
         <div class="timeline">
             <div class="container left">
-                <div class="content">
-                    <h2 class="h2_timeline">September 2022</h2>
-                    <p>Lorem ipsum..</p>
+                <div id="content_nttdata">
+                    <img src="img/companies/ntt-white-white.png" alt="NTT Data"
+                        style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
+                    <h1 id="h1_timeline">Ingeniería de datos</h1>
+                    <p class="basic_text">Planificación, desarrollo, supervisión y documentación de procesos ETL
+                        (Extract, Transform, Load) para la ingesta, transformación y preparación de grandes
+                        volúmenes de datos provenientes de BBVA, asegurando la calidad de los datos para su
+                        posterior análisis y explotación.</p>
+                    <div class="div_tools">
+                        <p>AWS, Python, Pyspark, SQL, Jenkins, Hadoop, HOCON, JSON, Jira,
+                            Git, Bitbucket</p>
+                    </div>
+                    <h1 id="h1_timeline">Desarrollo de software</h1>
+                    <p class="basic_text">Desarrollo de evolutivos backend para BBVA utilizando Spark Scala, optimizando
+                        herramientas
+                        de procesamiento de datos, garantizando su retrocompatibilidad y añadiendo nuevas
+                        funcionalidades que amplían las capacidades del software.</p>
+                    <div class="div_tools">
+                        <table style="width: 100%;">
+                            <tr>
+                                <td style="width: 25%;"><img src="img/tools/aws-logo.png" alt="Tool 1"
+                                        style="width: 100%; height: auto;"></td>
+                                <td style="width: 25%;"><img src="img/tools/python-logo.png" alt="Tool 2"
+                                        style="width: 100%; height: auto;"></td>
+                                <td style="width: 25%;"><img src="img/tools/apache-spark-logo.png" alt="Tool 3"
+                                        style="width: 100%; height: auto;"></td>
+                                <td style="width: 25%;"><img src="img/tools/sql-logo.png" alt="Tool 4"
+                                        style="width: 100%; height: auto;"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 25%;"><img src="img/tools/jenkins-logo.png" alt="Tool 5"
+                                        style="width: 100%; height: auto;"></td>
+                                <td style="width: 25%;"><img src="img/tools/hadoop-logo.png" alt="Tool 6"
+                                        style="width: 100%; height: auto;"></td>
+                                <td style="width: 25%;"><img src="img/tools/json-logo.png" alt="Tool 7"
+                                        style="width: 100%; height: auto;"></td>
+                                <td style="width: 25%;"><img src="img/tools/jira-logo.png" alt="Tool 8"
+                                        style="width: 100%; height: auto;"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 25%;"><img src="img/tools/git-logo.png" alt="Tool 9"
+                                        style="width: 100%; height: auto;"></td>
+                                <td colspan="2" style="width: 50%;"><img src="img/tools/bitbucket-logo.png"
+                                        alt="Tool 10" style="width: 100%; height: auto;"></td>
+                                <td style="width: 25%;"><img src="img/tools/bbva-logo.png" alt="Tool 11"
+                                        style="width: 100%; height: auto;"></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
-            <div class="container right">
-                <div class="content">
-                    <h2 class="h2_timeline">June 2024</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-            <div class="container left">
-                <div class="content">
-                    <h2 class="h2_timeline">September 2024</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-            <div class="container right">
-                <div class="content">
-                    <h2 class="h2_timeline">January 2025</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-        </div>
     </section>
     <hr class="hr_footer">
+    <h1 id="h1_footer">Contact me</h1>
     <footer>
-        <div id="div3">
-            <a class="anchor_footer" href="mailto:dev.javier.reyes@gmail.com"><img class="icons_footer"
-                    src="img/mail-mark.png" alt="Mail" /></a>
-            <a href="https://www.linkedin.com/in/javier-reyes-%C3%A1lvarez-2a0a29279/"><img class="icons_footer"
-                    src="img/linkedin-mark.png" alt="Linkedin"></a>
-            <a href="https://github.com/JavierReyesDev"><img class="icons_footer" src="img/github-mark.png"
-                    alt="Github"></a>
-        </div>
+        <a class="anchor_footer" href="mailto:dev.javier.reyes@gmail.com"><img class="icons_footer"
+                src="img/contact/mail-mark.png" alt="Mail" /></a>
+        <a href="https://www.linkedin.com/in/javier-reyes-%C3%A1lvarez-2a0a29279/"><img class="icons_footer"
+                src="img/contact/linkedin-mark.png" alt="Linkedin"></a>
+        <a href="https://github.com/JavierReyesDev"><img class="icons_footer" src="img/contact/github-mark.png"
+                alt="Github"></a>
     </footer>
 </body>
 
