--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
 <body>
     <header id="div1">
         <div class="logo_menu">
-            <h1 id="logo"><span style="color:aqua;">></span>Javier Reyes Álvarez</h1>
+            <h1 id="main_logo"><span style="color:aqua;">></span>Javier Reyes Álvarez</h1>
         </div>
         <nav class="nav_menu">
             <a class="header_menu" href="index.html">Welcome</a>
@@ -23,14 +23,12 @@
     </section>
     <hr class="hr_footer">
     <footer>
-        <div id="div3">
-            <a class="anchor_footer" href="mailto:dev.javier.reyes@gmail.com"><img class="icons_footer"
-                    src="img/mail-mark.png" alt="Mail" /></a>
-            <a href="https://www.linkedin.com/in/javier-reyes-%C3%A1lvarez-2a0a29279/"><img class="icons_footer"
-                    src="img/linkedin-mark.png" alt="Linkedin"></a>
-            <a href="https://github.com/JavierReyesDev"><img class="icons_footer" src="img/github-mark.png"
-                    alt="Github"></a>
-        </div>
+        <a class="anchor_footer" href="mailto:dev.javier.reyes@gmail.com"><img class="icons_footer"
+                src="img/contact/mail-mark.png" alt="Mail" /></a>
+        <a href="https://www.linkedin.com/in/javier-reyes-%C3%A1lvarez-2a0a29279/"><img class="icons_footer"
+                src="img/contact/linkedin-mark.png" alt="Linkedin"></a>
+        <a href="https://github.com/JavierReyesDev"><img class="icons_footer" src="img/contact/github-mark.png"
+                alt="Github"></a>
     </footer>
 </body>
 
